--- a/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
+++ b/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
@@ -1,6 +1,7 @@
 body {
   font-family: sans-serif;
   font-size: 1.5rem;
+  background-image:url('https://github.com/HitmanBoi/Memethon/blob/main/Juan_cover.jpeg');
 }
 
 img {
