--- a/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
+++ b/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
@@ -1,4 +1,7 @@
 .app {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   font-family: Arial, sans-serif;
   line-height: 1.6;
   color: #333;
@@ -8,7 +11,7 @@
 }
 
 .hero {
-  background-image: url('horse-racing.jpg'); /* Horse racing image */
+  background-image: url('https://github.com/HitmanBoi/Memethon/blob/746f82698861fee0fb9b3df3f1db83b77ebb42ae/Juan_cover.jpeg'); /* Horse racing image */
   background-size: 100% 100vh;
   background-position: 0% 100%;
   height: 100vh;
