--- a/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
+++ b/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
@@ -1,13 +1,11 @@
 .app {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
   font-family: Arial, sans-serif;
   line-height: 1.6;
   color: #333;
   background-image: linear-gradient(to bottom, #87CEEB, #F7F7F7); /* Gradient from sky blue to light gray */
   background-size: 100% 100vh;
   background-position: 0% 100%;
+  flex-direction: column;
 }
 
 .hero {
@@ -16,6 +14,7 @@
   background-position: 0% 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #fff;
@@ -26,6 +25,8 @@
   margin-bottom: 20px;
   color: #F7DC6F; /* Golden yellow color */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-align: center;
+
 }
 
 .hero button {
@@ -37,6 +38,7 @@
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  align-self: center;
 }
 
 .hero button:hover {
