--- a/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
+++ b/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
@@ -55,29 +55,34 @@
   margin: 0;
   padding: 0;
   display: flex;
-  flex-wrap: wrap;
+  
+  flex-direction:row;
   justify-content: space-between;
 }
 
 .features li {
-  margin: 20px;
+  margin: 10px;
   width: calc(33.33% - 20px);
   background-color: #fff; /* White color */
   border: 1px solid #ddd; /* Light gray border */
-  padding: 20px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
+
+
 .features i {
-  font-size: 48px;
-  margin-bottom: 20px;
+  font-size: 20px;
+  margin-bottom: 10px;
   color: #F7DC6F; /* Golden yellow color */
 }
 
 .tokenomics {
   padding: 2em;
   background-color: #F7F7F7; /* Light gray color */
+  text-align: center;
 }
 
 .tokenomics button {
