--- a/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
+++ b/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
@@ -48,6 +48,7 @@
 .features {
   padding: 2em;
   background-color: #8BC34A; /* Light green grass color */
+  text-align: center;
 }
 
 .features ul {
