--- a/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
+++ b/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
@@ -84,6 +84,8 @@
   padding: 2em;
   background-color: #F7F7F7; /* Light gray color */
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .tokenomics button {
