--- a/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
+++ b/Juan_Horse/src/Juan_Horse_frontend/src/index.scss
@@ -102,3 +102,38 @@
 .tokenomics button:hover {
   background-color: #3e8e41; /* Darker green color */
 }
+
+.allocation {
+  padding: 2em;
+  background-color: #8BC34A; /* Light green grass color */
+  text-align: center;
+}
+
+.allocation ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  
+  flex-direction:row;
+  justify-content: space-between;
+}
+
+.allocation li {
+  margin: 10px;
+  width: calc(33.33% - 20px);
+  background-color: #fff; /* White color */
+  border: 1px solid #ddd; /* Light gray border */
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+
+
+.allocation i {
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: #F7DC6F; /* Golden yellow color */
+}
